[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "llm-rs"
authors = [
  { name="Lukas Kreussel"},
]
description = "Unofficial python bindings for llm-rs. ðŸâ¤ï¸ðŸ¦€"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/LLukas22/llm-rs-python"
"Bug Tracker" = "https://github.com/LLukas22/llm-rs-python/issues"


[tool.maturin]
features = ["pyo3/extension-module"]
